# CnCpp-MemoryManagement

./: .gitignore  .gitmodules  ABOUT.md  CMakeLists.txt  setup.profile
cmake/: policy.cmake  project_defaults.cmake  strict.cmake
heap/: ABOUT.md  CMakeLists.txt  deletePtr.cpp  freePtr.c  heap.c  heap.cpp  heapusage.cpp  heapusage.hpp  uniquePtr.cpp
heap/corrupted/: CMakeLists.txt  checking.cpp  corrupt.c
heap/fragmented/: CMakeLists.txt  memusage.cpp  packet.hpp  pool.cpp  pool.hpp  rssusage.c  rssusage.cpp  rssusage.h  stackusage.cmake
heap/overlooked/: CMakeLists.txt  ex1-overlooked.c  ex1-overlooked.cpp  image.hpp  rinfo.cpp  rinfo.hpp  sample.hpp  sample_module.c  sample_module.h
heap/usingnames/: CMakeLists.txt  usingnames  usingnames.cpp
stack/: .gitignore  ABOUT.md  CMakeLists.txt  stack.c  stack.cpp  stack.h
